--- a/dialogs/confirmdialog.kv
+++ b/dialogs/confirmdialog.kv
@@ -20,7 +20,7 @@
         MDSeparator:
             color: C("FFFFFF")
 
-        MDBoxLayout:
+        Widget:
             size_hint: 1, 0.2
 
         MDLabel:
@@ -36,7 +36,7 @@
             orientation: "horizontal"
             spacing: "8dp"
 
-            MDBoxLayout:
+            Widget:
 
             MDRectangleFlatButton:
                 font_style: "Button"
