--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -136,7 +136,7 @@
                 text: f"[color=#FFFFFF]-[/color][color=#1565c0][size=22sp][font=Icons]{md_icons['numeric-1-box']}[/font][/size][/color] [color=#FFFFFF]point[/color] for each coder that determined a coder guilty and was part of the majority."
                 markup: True
 
-            MDBoxLayout:
+            Widget:
 
         MDBottomAppBar:
             MDToolbar:
