--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -35,7 +35,7 @@
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle1'
-                text: "Greetings, please select the [color=#FFFFFF]amount[/color] of [color=#FFFFFF]players[/color] that are currently playing."
+                text: "Please select the [color=#FFFFFF]amount[/color] of [color=#FFFFFF]players[/color] that are currently playing."
                 halign: "center"
                 markup: True
 
@@ -106,7 +106,7 @@
                     on_press:
                         root.selectcheck(butt6)
 
-        MDBoxLayout:
+        Widget:
             size_hint: 1, 0.6
 
         MDBottomAppBar:
