--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -119,7 +119,7 @@
                     icon: "circle-outline"
                     halign: "center"
 
-            MDBoxLayout:
+            Widget:
                 size_hint: 1, 0.1
 
             MDLabel:
@@ -130,7 +130,7 @@
                 font_style: "Subtitle1"
                 adaptive_height: True
 
-        MDBoxLayout:
+        Widget:
 
         MDBottomAppBar:
             MDToolbar:
