--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -70,11 +70,6 @@
                 adaptive_height: True
                 markup: True
 
-        Widget:
-            size_hint: 1, 0.5
-
-        Widget:
-
         MDRectangleFlatButton:
             font_style: "Button"
             theme_text_color: "Custom"
@@ -83,4 +78,5 @@
             text_color: C("FFFFFF")
             text: "End Turn"
             on_release:
+                app.root.get_screen('reveal').trackplayer()
                 root.dismiss()
