--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -39,7 +39,7 @@
                 halign: "center"
                 markup: True
 
-            MDBoxLayout:
+            Widget:
 
             MDLabel:
                 text_color: app.theme_cls.primary_color
