--- a/dialogs/actiondialog.kv
+++ b/dialogs/actiondialog.kv
@@ -75,11 +75,10 @@
         MDSeparator:
             color: C("FFFFFF")
 
-        MDBoxLayout:
-            adaptive_height: True
-            orientation: "horizontal"
-            spacing: "8dp"
+        MDGridLayout:
             id: addbuttons
+            cols: 4
+            adaptive_height: True
             canvas.before:
                 Color:
                     rgba: 0/255, 0/255, 0/255, 0.8
@@ -125,9 +124,6 @@
                 theme_text_color: "Custom"
                 halign: "center"
                 markup: True
-
-        Widget:
-            size_hint: 1, 0.5
 
         MDRectangleFlatButton:
             id: okaction
