--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -1,9 +1,9 @@
 <LogDialog>:
-    size_hint: 0.9, 0.5
+    size_hint: 0.5, 0.25
     auto_dismiss: False
 
     MDCard:
-        spacing: "12dp"
+        spacing: "8dp"
         orientation: "vertical"
         padding: "8dp"
         md_bg_color: app.theme_cls.primary_color
@@ -22,28 +22,22 @@
         MDSeparator:
             color: C("FFFFFF")
 
-        Widget:
-            size_hint: 1, 0.01
-
         MDBoxLayout:
             spacing: "8dp"
-            padding: "8dp"
             orientation: "vertical"
 
             MDLabel:
                 font_style: "Subtitle2"
                 adaptive_height: True
                 theme_text_color: "Custom"
-                halign: "center"
                 text_color: C("FFFFFF")
-                text: "Only the player which owns the log may upload and see the results."
+                text: "[u]Confidential:[/u] Player logs may not be revealed until the end of the phase."
 
             Widget:
                 size_hint: 1, 0.01
 
             MDBoxLayout:
                 orientation: "vertical"
-                padding: "8dp"
                 canvas.before:
                     Color:
                         rgba: 0/255, 0/255, 0/255, 0.8
@@ -73,12 +67,6 @@
                     markup: True
                     text: "Only one hacker is among the following."
 
-            Widget:
-                size_hint: 1, 0.01
-
-        Widget:
-            size_hint: 1, 0.01
-
         MDRectangleFlatButton:
             id: okbutton
             font_style: "Button"
@@ -86,7 +74,7 @@
             pos_hint: {"center_x": 0.5, "center_y": 0.5}
             line_color: C("FFFFFF")
             text_color: C("FFFFFF")
-            text: "OK"
+            text: "End Turn"
             on_release:
                 app.root.get_screen('main').ids.mainscreenmanager.get_screen('playerlogscreen').trackplayer()
                 root.dismiss()
