--- a/gui/load.kv
+++ b/gui/load.kv
@@ -9,16 +9,21 @@
 
     MDBoxLayout:
         orientation: "vertical"
-        pos_hint: {"center_x":0.5, "center_y":0.5}
-        size_hint: 0.7, 0.4
+
+        Widget:
 
         Image:
-            size: self.texture_size
+            pos_hint: {"center_x":0.5, "center_y":0.5}
+            size_hint: 0.7, 0.4
             source: "images/logo.png"
 
         MDProgressBar:
+            size_hint: 0.5, 0.01
+            pos_hint: {"center_x":0.5, "center_y":0.5}
             id: loadbar
             type: "determinate"
             running_duration: 2.4
             size: self.size
             color: app.theme_cls.primary_color
+
+        Widget:
