Labels for player folders, change color based on player that owns them.

--- a/gui/mainscreens/Action.kv
+++ b/gui/mainscreens/Action.kv
@@ -30,7 +30,7 @@
                 Rectangle:
                     pos: self.pos
                     size: self.size
-            size_hint_x: 0.3
+            size_hint: 0.3, 0.8
             cols: 4
 
             AnchorLayout:
