--- a/gui/mainscreens/PlayerLog.kv
+++ b/gui/mainscreens/PlayerLog.kv
@@ -30,7 +30,7 @@
                 Rectangle:
                     pos: self.pos
                     size: self.size
-            size_hint_x: 0.2
+            size_hint: 0.2, 0.8
             cols: 2
 
             AnchorLayout:
