--- a/codenet.kv
+++ b/codenet.kv
@@ -309,14 +309,25 @@ WindowManager:
                         Widget:
                             size_hint: 1, 0.5
 
-                        MDFloatingLabel:
+                        MDLabel:
                             id:playerlog1
                             adaptive_height: True
+                            size_hint_x: None
+                            width: self.texture_size[0]
+                            text_size: None, None
                             text: f"[size=20sp][font=Icons]{md_icons['account']}[/font] [font=H4]Player Log[/font][/size]"
                             theme_text_color: "Custom"
                             markup: True
                             text_color: C('#FFFFFF')
                             pos_hint: {"center_x": 0.5}
+                            canvas.before:
+                                Color:
+                                    group: '1'
+                                    rgba: app.theme_cls.primary_color
+                                RoundedRectangle:
+                                    pos: self.x - 8, self.y - 3
+                                    size: self.width + 16, self.height + 6
+                                    radius: [5]
 
                         MDBoxLayout:
                             pos_hint: {"center_x":0.5, "y": 0}
@@ -355,14 +366,15 @@ WindowManager:
                             size_hint_x: None
                             width: self.texture_size[0]
                             text_size: None, None
-                            text: f"[size=20sp][font=Icons]{md_icons['account']}[/font] [font=H4]Log[/font][/size]"
+                            text: f"[size=20sp][font=Icons]{md_icons['account']}[/font] [font=H4]Player Log[/font][/size]"
                             theme_text_color: "Custom"
                             markup: True
                             text_color: C('#FFFFFF')
                             pos_hint: {"center_x": 0.5}
                             canvas.before:
                                 Color:
-                                    rgba: C('#FF0000')
+                                    group: '2'
+                                    rgba: app.theme_cls.primary_color
                                 RoundedRectangle:
                                     pos: self.x - 8, self.y - 3
                                     size: self.width + 16, self.height + 6
