--- a/gui/mainscreens/PlayerLog.kv
+++ b/gui/mainscreens/PlayerLog.kv
@@ -64,7 +64,7 @@
         MDFillRoundFlatIconButton:
             id: reveallog
             adaptive_height: True
-            icon: "file-code"
+            icon: "folder-search"
             text: "Reveal Log"
             pos_hint: {"center_x": 0.5}
             md_bg_color: app.theme_cls.primary_color
