--- a/gui/mainscreens/Action.kv
+++ b/gui/mainscreens/Action.kv
@@ -82,8 +82,8 @@
         MDFillRoundFlatIconButton:
             id: useaction
             adaptive_height: True
-            icon: "file-code"
-            text: "Use Action"
+            icon: "code-not-equal-variant"
+            text: "Begin Action"
             pos_hint: {"center_x": 0.5}
             md_bg_color: app.theme_cls.primary_color
             font_style: "Button"
