--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -3,6 +3,7 @@
     size_hint: 0.9, 0.5
 
     MDCard:
+        id: identitycard
         orientation: "vertical"
         spacing: "12dp"
         padding: "8dp"
