--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -27,11 +27,12 @@
             orientation: "vertical"
 
             MDLabel:
+                markup: True
                 font_style: "Subtitle2"
                 adaptive_height: True
                 theme_text_color: "Custom"
                 text_color: C("FFFFFF")
-                text: "[u]Confidential:[/u] Player logs may not be revealed until the end of the phase."
+                text: "[u]Confidential[/u]: Player logs may not be revealed until the end of the phase."
 
             Widget:
                 size_hint: 1, 0.01
